--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                     <span style="font-weight: 700; color: rgba(255,255,255,0.7);">Durand</span> <span style="font-weight: 500; color: #fff;">E</span><span style="font-weight: 700; color: #8CC63F;">H</span><span style="font-weight: 500; color: #fff;">AP</span><span style="font-size: 0.55em; vertical-align: super; color: rgba(255,255,255,0.45); letter-spacing: 0;">&trade;</span>
                 </div>
                 <p>
-                    EAPs sit at 3&ndash;5% utilization &mdash; not because the concept is wrong, but because the experience hasn&rsquo;t evolved. Durand E<span style="color:#8CC63F;">H</span>AP starts with a genuinely better EAP &mdash; 6 counselling sessions, better access, better outcomes &mdash; then adds predictive health intelligence powered by advanced multiomic testing. Same PEPM. Fewer surprise claims. Healthier, more productive employees. Ask your broker.
+                    Employee Assistance Programs (EAPs) &mdash; the short-term counselling benefit most employers offer at $3&ndash;5 per employee per month &mdash; sit at just 3&ndash;5% utilization. Not because the concept is wrong, but because the experience hasn&rsquo;t evolved. Durand E<span style="color:#8CC63F;">H</span>AP starts with a genuinely better model &mdash; a dedicated health professional who assesses employees across 13 clinical conditions, builds personalized action plans, and navigates them to the right care with no artificial session caps &mdash; then adds predictive health intelligence powered by advanced multiomic testing. Same PEPM. Fewer surprise claims. Healthier, more productive employees. Ask your broker.
                 </p>
                 <div class="hero-buttons">
                     <a href="mailto:support@durand.life" class="btn btn-primary">Ask Your Broker About E<span style="color:#fff; font-weight:800;">H</span>AP</a>
@@ -677,12 +677,12 @@
             <div class="section-header">
                 <div class="section-label">For Benefits Brokers</div>
                 <h2 class="section-title">A Better EAP &mdash; And So Much More.<br>For No More Money.</h2>
-                <p class="section-subtitle">EAPs are widely underutilized &mdash; most sit at 3&ndash;5% engagement. Not because the concept is wrong, but because the experience hasn&rsquo;t evolved. Durand E<span style="color:#8CC63F;">H</span>AP starts with a genuinely better EAP and then adds what no EAP was ever designed to do: predictive health intelligence.</p>
+                <p class="section-subtitle">Employee Assistance Programs (EAPs) &mdash; the short-term counselling and crisis-referral benefit most large North American employers offer at $3&ndash;5 per employee per month &mdash; sit at just 3&ndash;5% utilization. Traditional EAPs offer a handful of counselling sessions, a phone line, and basic legal or financial advice. No medical services. No diagnostics. No prevention. Durand E<span style="color:#8CC63F;">H</span>AP starts with a genuinely better model &mdash; a dedicated health professional who assesses employees across 13 clinical conditions, builds personalized action plans, and navigates them to the right care with no artificial session caps &mdash; then adds what no EAP was ever designed to do: predictive health intelligence powered by advanced multiomic testing.</p>
             </div>
 
             <div class="value-banner fade-in">
                 <h3>Same Spend. Smarter Spend. Less Spend Over Time.</h3>
-                <p>The Durand E<span style="color:#8CC63F;">H</span>AP includes 6 counselling sessions through a national partner &mdash; better access, better matching, higher utilization &mdash; plus epigenetic testing across 40+ organ systems, AI health coaching, cognitive assessment, and care navigation. All at the same PEPM.</p>
+                <p>The Durand E<span style="color:#8CC63F;">H</span>AP includes 6 dedicated coaching sessions with a registered health professional &mdash; clinical intake across 13 conditions, a personalized action plan, and care navigation to matched providers funded through your client&rsquo;s existing extended health benefits. No session caps on therapy. Better assessment. Better matching. Better outcomes. Plus epigenetic testing across 40+ organ systems, AI health coaching, cognitive assessment, and care navigation. All at the same PEPM.</p>
             </div>
 
             <!-- EMPLOYEE SHOWCASE -->
@@ -697,7 +697,7 @@
                     <ul style="list-style: none; padding: 0; display: flex; flex-direction: column; gap: 10px;">
                         <li style="display: flex; align-items: flex-start; gap: 10px; font-size: 14px; color: var(--gray-700); line-height: 1.5;">
                             <span style="color: var(--teal); font-weight: 700; flex-shrink: 0;">&#10003;</span>
-                            <span><strong>6 counselling sessions</strong> &mdash; Advanced EAP through a national partner</span>
+                            <span><strong>6 sessions with a dedicated health professional</strong> &mdash; clinical assessment, personalized action plan, and navigation to the right care provider through existing benefits. No session caps on therapy.</span>
                         </li>
                         <li style="display: flex; align-items: flex-start; gap: 10px; font-size: 14px; color: var(--gray-700); line-height: 1.5;">
                             <span style="color: var(--teal); font-weight: 700; flex-shrink: 0;">&#10003;</span>
@@ -749,7 +749,7 @@
                     <img class="card-img-photo" src="https://images.unsplash.com/photo-1450101499163-c8848c66ca85?w=600&h=400&fit=crop&crop=center" alt="Business professional reviewing financial documents">
                     <div class="card-img-body">
                         <h3>No Incremental Cost</h3>
-                        <p>We match your client's current EAP spend. They get an Advanced EAP with 6 counseling sessions plus Durand's full health intelligence platform. Zero budget increase needed.</p>
+                        <p>We match your client's current EAP spend. They get a dedicated health professional who assesses employees across 13 clinical conditions, plus Durand's full health intelligence platform. Zero budget increase needed.</p>
                     </div>
                 </div>
                 <div class="card card-img fade-in">
@@ -1163,7 +1163,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr><td>Mental Health Counseling</td><td><span class="check">&#10003;</span> Limited sessions</td><td class="highlight-col"><span class="check">&#10003;</span> Advanced EAP — 6 sessions</td></tr>
+                        <tr><td>Mental Health Support</td><td><span class="check">&#10003;</span> Limited counselling sessions (typically 3&ndash;8, then done)</td><td class="highlight-col"><span class="check">&#10003;</span> 6 coaching sessions with dedicated health professional + navigation to therapy with no session caps</td></tr>
                         <tr><td>Epigenetic Testing</td><td><span class="cross">&#10007;</span></td><td class="highlight-col"><span class="check">&#10003;</span> 40+ organ health scores</td></tr>
                         <tr><td>Cognitive Assessment</td><td><span class="cross">&#10007;</span></td><td class="highlight-col"><span class="check">&#10003;</span> Clinically validated</td></tr>
                         <tr><td>AI Health Coaching</td><td><span class="cross">&#10007;</span></td><td class="highlight-col"><span class="check">&#10003;</span> 40+ languages, physician-supervised</td></tr>
@@ -1189,7 +1189,7 @@
                 </div>
                 <div class="stat-box">
                     <div class="stat-number">6</div>
-                    <div class="stat-label">Advanced EAP Counseling Sessions</div>
+                    <div class="stat-label">Dedicated Coaching Sessions With a Health Professional</div>
                 </div>
                 <div class="stat-box">
                     <div class="stat-number">30+</div>
@@ -1209,7 +1209,7 @@
             <div class="steps fade-in">
                 <div class="step">
                     <h4>Match &amp; Replace</h4>
-                    <p>Tell us your client's current EAP spend. We match it and replace it with the Durand E<span style="color:#8CC63F;">H</span>AP &mdash; 6 counseling sessions plus full predictive health intelligence, same PEPM cost.</p>
+                    <p>Tell us your client's current EAP spend. We match it and replace it with the Durand E<span style="color:#8CC63F;">H</span>AP &mdash; dedicated health professional, clinical assessment, care navigation, and full predictive health intelligence. Same PEPM cost.</p>
                 </div>
                 <div class="step">
                     <h4>Deploy to Employees</h4>
@@ -1239,7 +1239,7 @@
             <div class="two-col fade-in">
                 <div class="two-col-text">
                     <h2>The E<span style="color:#8CC63F;">H</span>AP: Your EAP, <span style="background: var(--gradient-brand); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Reimagined</span></h2>
-                    <p>Most Employee Assistance Programs see 3-5% utilization. Your employees don't use them. With the Durand E<span style="color:#8CC63F;">H</span>AP, you get an Advanced EAP with 6 counseling sessions plus a complete health intelligence platform — without increasing your benefits budget.</p>
+                    <p>Most Employee Assistance Programs see 3&ndash;5% utilization. Your employees don&rsquo;t use them. With the Durand E<span style="color:#8CC63F;">H</span>AP, you get a dedicated health professional who assesses your employees across 13 clinical conditions, builds personalized action plans, and navigates them to matched care providers &mdash; plus a complete health intelligence platform &mdash; without increasing your benefits budget.</p>
                     <ul class="feature-list">
                         <li><span class="icon"></span> Epigenetic testing with 40+ organ health scores</li>
                         <li><span class="icon"></span> Clinically validated cognitive assessment</li>
