--- a/index.html
+++ b/index.html
@@ -925,6 +925,12 @@
                 <div class="section-label">Why E<span style="color:#8CC63F;">H</span>AP</div>
                 <h3 style="font-family: var(--font-serif); font-size: 26px; font-weight: 700; color: var(--dark); line-height: 1.3; margin-top: 12px;">E<span style="color:#8CC63F;">H</span>AP by Durand&reg; &mdash; Employee <u style="color:#8CC63F;">H</u>ealth <em>and</em> Assistance Plan</h3>
                 <p style="font-size: 16px; color: var(--gray-700); line-height: 1.8; margin-top: 16px;">North American employers spend <strong style="color: var(--dark);">$1.2 trillion annually</strong> on healthcare &mdash; almost entirely on <em>repair</em>. Treating disease after it arrives. Paying for surgeries, drugs, and disability after the damage is done. It&rsquo;s a crash repair world with no crash avoidance system.</p>
+
+                <div style="background: linear-gradient(135deg, rgba(43,165,165,0.06), rgba(140,198,63,0.06)); border: 1px solid rgba(43,165,165,0.15); border-left: 4px solid var(--teal); border-radius: 0 12px 12px 0; padding: 24px 28px; margin-top: 24px;">
+                    <h4 style="font-size: 16px; font-weight: 700; color: var(--dark); margin-bottom: 10px;">Why E<span style="color:#8CC63F;">H</span>AP, not EAP?</h4>
+                    <p style="font-size: 14px; color: var(--gray-700); line-height: 1.8; margin: 0;">Traditional Employee Assistance Programs help after problems arise &mdash; a few counselling sessions and a crisis phone line. We kept &ldquo;Assistance Plan&rdquo; because brokers and benefits buyers know the category. We added &ldquo;<strong style="color:#8CC63F;">Health</strong>&rdquo; because that&rsquo;s what&rsquo;s actually missing. The Durand E<span style="color:#8CC63F;">H</span>AP replaces your existing EAP with a superior model &mdash; a dedicated health professional who assesses, coaches, and navigates employees to the right care with no session caps &mdash; AND adds a complete health intelligence layer: epigenetic testing, cognitive screening, AI health coaching, and continuous biological monitoring. It shifts the employer from paying to fix disease after it arrives to preventing it before it starts. <strong>Same budget line. Fundamentally different outcome.</strong></p>
+                </div>
+
                 <div class="category-grid" style="margin-top: 24px;">
                     <div class="category-item" style="border-left: 3px solid #ff6b6b;">
                         <h4>The Repair Model</h4>
@@ -977,6 +983,14 @@
                 </div>
 
                 <p style="font-size: 12px; color: rgba(255,255,255,0.7); line-height: 1.6; margin-bottom: 24px;">Sources: STEP 1 Extension Trial (2022) showed two-thirds weight regain within one year of stopping semaglutide. Oxford/BMJ meta-analysis (Jan 2026) confirmed GLP-1 rebound is faster than behavioral weight loss. Metabolism review (2025) found 25-40% of GLP-1 weight loss is lean muscle mass.</p>
+
+                <div style="background: rgba(43,165,165,0.1); border: 1px solid rgba(43,165,165,0.25); border-left: 4px solid var(--teal); border-radius: 0 12px 12px 0; padding: 24px 28px; margin-bottom: 24px;">
+                    <h4 style="color: var(--lime); font-size: 15px; font-weight: 700; margin-bottom: 10px;">The PEPM Math Brokers Need</h4>
+                    <p style="font-size: 14px; color: rgba(255,255,255,0.9); line-height: 1.8; margin-bottom: 12px;">A single failed GLP-1 cycle costs the employer <strong style="color: #fff;">$2,000+</strong> in drug spend &mdash; with zero long-term health ROI. The employee ends up heavier, weaker, and often clinically depressed, generating additional claims. That $2,000 failure equals approximately <strong style="color: #ff6b6b;">$167 per month in wasted PEPM</strong> &mdash; on just one employee, on just one intervention.</p>
+                    <p style="font-size: 14px; color: rgba(255,255,255,0.9); line-height: 1.8; margin-bottom: 12px;">The Durand E<span style="color:#8CC63F;">H</span>AP &mdash; which manages GLP-1 outcomes alongside CBT, nutrition, resistance training, and continuous monitoring &mdash; costs <strong style="color: var(--lime);">$3&ndash;5 PEPM</strong>.</p>
+                    <p style="font-size: 15px; color: #fff; font-weight: 700; margin: 0;">That&rsquo;s a potential 33-to-1 loss ratio. $167 PEPM wasted vs. $5 PEPM to help prevent it.</p>
+                    <p style="font-size: 13px; color: rgba(255,255,255,0.7); line-height: 1.7; margin-top: 10px; margin-bottom: 0;">And GLP-1 is just one example. Multiply across unmanaged chronic pain, undetected metabolic risk, missed cancer screenings, and late-stage cardiac events &mdash; each a five- or six-figure cost that early detection and outcome management could help bend.</p>
+                </div>
 
                 <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 24px;">
                     <div style="padding: 24px; background: rgba(255,107,107,0.12); border: 1px solid rgba(255,107,107,0.25); border-radius: 12px;">
@@ -1173,7 +1187,8 @@
                         <tr><td>Wearable Integration</td><td><span class="cross">&#10007;</span></td><td class="highlight-col"><span class="check">&#10003;</span> 30+ devices</td></tr>
                         <tr><td>Home-Based Collection</td><td>N/A</td><td class="highlight-col"><span class="check">&#10003;</span> Painless mail-in collection</td></tr>
                         <tr><td>Data Privacy</td><td>Varies</td><td class="highlight-col"><span class="check">&#10003;</span> NEVER sell data. Guaranteed.</td></tr>
-                        <tr><td>Average Utilization</td><td>3-5%</td><td class="highlight-col"><strong>Significantly higher</strong></td></tr>
+                        <tr><td>Engagement Model</td><td>Reactive &mdash; employee must self-refer during crisis</td><td class="highlight-col">Proactive &mdash; home test kit, personal Health Agent, continuous monitoring</td></tr>
+                        <tr><td>Economic Impact</td><td>$3&ndash;5 PEPM spent, no measurable cost avoidance</td><td class="highlight-col"><strong>$3&ndash;5 PEPM spent, with potential to avoid losses of $167+ PEPM per failed GLP-1 cycle alone</strong></td></tr>
                     </tbody>
                 </table>
             </div>
