--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
         <div class="trust-bar-items">
             <div class="trust-bar-item"><div class="trust-bar-icon">&#128274;</div> Secure AI-Powered Health Intelligence</div>
             <div class="trust-bar-item"><div class="trust-bar-icon" style="background:rgba(68,184,120,0.08);">&#128300;</div> Epigenetic Science</div>
-            <div class="trust-bar-item"><div class="trust-bar-icon">&#127760;</div> 40+ Languages Supported &mdash; Coming Soon</div>
+            <div class="trust-bar-item"><div class="trust-bar-icon">&#127760;</div> Multilingual Health Agent &mdash; English, French, Spanish, Hindi &amp; More</div>
             <div class="trust-bar-item"><div class="trust-bar-icon" style="background:rgba(68,184,120,0.08);">&#129516;</div> Navigation to Outcome-Focused Care Providers</div>
         </div>
     </div>
@@ -676,6 +676,7 @@
         <div class="section-inner">
             <div class="section-header">
                 <div class="section-label">For Benefits Brokers</div>
+                <p style="font-size: 15px; color: var(--gray-500); margin-top: 8px; margin-bottom: 4px;">A differentiated product your competitors can&rsquo;t offer. Same client spend. Radically better outcomes.</p>
                 <h2 class="section-title">A Better EAP &mdash; And So Much More.<br>For No More Money.</h2>
                 <p class="section-subtitle">Employee Assistance Programs (EAPs) &mdash; the short-term counselling and crisis-referral benefit most large North American employers offer at $3&ndash;5 per employee per month &mdash; sit at just 3&ndash;5% utilization. Traditional EAPs offer a handful of counselling sessions, a phone line, and basic legal or financial advice. No medical services. No diagnostics. No prevention. Durand E<span style="color:#8CC63F;">H</span>AP starts with a genuinely better model &mdash; a dedicated health professional who assesses employees across 13 clinical conditions, builds personalized action plans, and navigates them to the right care with no artificial session caps &mdash; then adds what no EAP was ever designed to do: predictive health intelligence powered by advanced multiomic testing.</p>
             </div>
@@ -1183,7 +1184,7 @@
                         <tr><td>AI Health Coaching</td><td><span class="cross">&#10007;</span></td><td class="highlight-col"><span class="check">&#10003;</span> 40+ languages, physician-supervised</td></tr>
                         <tr><td>Sleep Analysis</td><td><span class="cross">&#10007;</span></td><td class="highlight-col"><span class="check">&#10003;</span> Wearable-integrated</td></tr>
                         <tr><td>Cancer &amp; Disease Risk</td><td><span class="cross">&#10007;</span></td><td class="highlight-col"><span class="check">&#10003;</span> 5-10 year predictive outlook</td></tr>
-                        <tr><td>Care Navigation</td><td><span class="cross">&#10007;</span></td><td class="highlight-col"><span class="check">&#10003;</span> GLP-1, Noom, vetted partners</td></tr>
+                        <tr><td>Care Navigation</td><td><span class="cross">&#10007;</span></td><td class="highlight-col"><span class="check">&#10003;</span> GLP-1 outcome management, Noom, Oura, Zumba &amp; expanding provider network</td></tr>
                         <tr><td>Wearable Integration</td><td><span class="cross">&#10007;</span></td><td class="highlight-col"><span class="check">&#10003;</span> 30+ devices</td></tr>
                         <tr><td>Home-Based Collection</td><td>N/A</td><td class="highlight-col"><span class="check">&#10003;</span> Painless mail-in collection</td></tr>
                         <tr><td>Data Privacy</td><td>Varies</td><td class="highlight-col"><span class="check">&#10003;</span> NEVER sell data. Guaranteed.</td></tr>
@@ -1247,6 +1248,7 @@
         <div class="section-inner">
             <div class="section-header">
                 <div class="section-label">For Employers</div>
+                <p style="font-size: 15px; color: var(--gray-500); margin-top: 8px; margin-bottom: 4px;">Same spend. Smarter spend. Less spend over time. Your EAP budget, finally working.</p>
                 <h2 class="section-title">Predict. Prevent. Save Millions.</h2>
                 <p class="section-subtitle">Our physicians and scientists have built the most advanced employee health assessment in the world. Your workforce gets it at the cost of an EAP you're already paying for.</p>
             </div>
@@ -1355,6 +1357,10 @@
     <section class="section" style="position: relative; overflow: hidden;">
         <div style="position: absolute; inset: 0; background: linear-gradient(180deg, rgba(27,45,107,0.03) 0%, transparent 60%);"></div>
         <div class="section-inner" style="position: relative;">
+            <div class="section-header" style="margin-bottom: 40px;">
+                <div class="section-label">For Individuals</div>
+                <p style="font-size: 15px; color: var(--gray-500); margin-top: 8px; margin-bottom: 0;">Your body knows what&rsquo;s coming. Advanced epigenetic health intelligence, starting at your kitchen table.</p>
+            </div>
             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 48px; align-items: center; margin-bottom: 48px;">
                 <div style="border-radius: 20px; overflow: hidden; box-shadow: 0 20px 60px rgba(0,0,0,0.12);">
                     <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?w=700&h=500&fit=crop&crop=face&facepad=2.5" alt="Beautiful woman radiating health and confidence" style="width: 100%; height: 400px; object-fit: cover; object-position: center; display: block;">
@@ -1391,7 +1397,7 @@
                             <p style="color: var(--gray-400); font-size: 12px; margin-top: 12px;">Secure checkout powered by Stripe</p>
                         </div>
                         <div style="background: rgba(43,165,165,0.06); border: 1px solid rgba(43,165,165,0.12); border-radius: 10px; padding: 14px 18px; margin-top: 16px;">
-                            <p style="font-size: 13px; color: var(--gray-600); line-height: 1.6; margin: 0;"><strong style="color: var(--teal);">&#128312; Care Navigation</strong> &mdash; Coming Soon. We&rsquo;re building a vetted network of outcome-focused care providers across the US and Canada. Care navigation services will be included at no additional cost when available.</p>
+                            <p style="font-size: 13px; color: var(--gray-600); line-height: 1.6; margin: 0;"><strong style="color: var(--teal);">&#128312; Care Navigation</strong> &mdash; We are actively building a vetted network of outcome-focused care providers across the US and Canada. Care navigation capabilities will expand throughout 2026 at no additional cost.</p>
                         </div>
                     </div>
                 </div>
@@ -1489,7 +1495,7 @@
                 <p style="margin-bottom: 12px;"><strong style="color: var(--gray-500);">Important Disclosures</strong></p>
                 <p style="margin-bottom: 8px;">Durand Future Health is not a medical provider and does not diagnose, treat, or cure any disease. Our health assessment is designed to provide predictive health intelligence and should be used in consultation with your physician or healthcare provider. Results are not a substitute for professional medical advice, diagnosis, or treatment.</p>
                 <p style="margin-bottom: 8px;">HSA/FSA eligibility varies by plan and is not guaranteed. We recommend consulting your plan administrator, HR department, or a qualified tax advisor to confirm that this assessment qualifies under your specific plan. Documentation is available upon request.</p>
-                <p style="margin-bottom: 8px;">Care navigation services are in development and will be offered at no additional cost when available. Features and availability may vary by geography.</p>
+                <p style="margin-bottom: 8px;">Care navigation capabilities are actively expanding throughout 2026 at no additional cost. Features and availability may vary by geography.</p>
                 <p style="margin-bottom: 8px;">Durand Future Health does not provide tax, legal, or financial advice. We are not responsible for changes in regulations that may affect HSA or FSA eligibility.</p>
                 <p style="margin-bottom: 12px;">Durand Future Health, Inc. (USA) &bull; Durand Future Health Ltd. (Canada)</p>
                 <p style="margin-bottom: 8px;"><strong style="color: var(--gray-500);">EAP Utilization Sources</strong></p>
