--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         .trust-bar { padding: 28px 24px; background: var(--white); border-bottom: 1px solid var(--gray-200); }
         .trust-bar-inner { max-width: 1280px; margin: 0 auto; display: flex; align-items: center; justify-content: center; gap: 3rem; flex-wrap: wrap; }
         .trust-bar-label { font-size: 11px; color: var(--dark); font-weight: 700; text-transform: uppercase; letter-spacing: 1.5px; }
-        .trust-bar-items { display: flex; align-items: center; justify-content: center; gap: 2.5rem; flex-wrap: wrap; }
+        .trust-bar-items { display: flex; align-items: center; justify-content: center; gap: 2.5rem; flex-wrap: nowrap; }
         .trust-bar-item { display: flex; align-items: center; gap: 8px; font-size: 13px; font-weight: 600; color: var(--gray-700); }
         .trust-bar-icon { width: 28px; height: 28px; border-radius: 6px; display: flex; align-items: center; justify-content: center; font-size: 14px; background: rgba(43,165,165,0.08); }
 
@@ -652,7 +652,7 @@
         <div class="trust-bar-items">
             <div class="trust-bar-item"><div class="trust-bar-icon">&#128274;</div> Secure AI-Powered Health Intelligence</div>
             <div class="trust-bar-item"><div class="trust-bar-icon" style="background:rgba(68,184,120,0.08);">&#128300;</div> Epigenetic Science</div>
-            <div class="trust-bar-item"><div class="trust-bar-icon">&#127760;</div> Multilingual Health Agent &mdash; English, French, Spanish, Hindi &amp; More</div>
+            <div class="trust-bar-item"><div class="trust-bar-icon">&#127760;</div> Multilingual Health Agent</div>
             <div class="trust-bar-item"><div class="trust-bar-icon" style="background:rgba(68,184,120,0.08);">&#129516;</div> Navigation to Outcome-Focused Care Providers</div>
         </div>
     </div>
