--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
         /* TRUST BAR */
         .trust-bar { padding: 28px 24px; background: var(--white); border-bottom: 1px solid var(--gray-200); }
-        .trust-bar-inner { max-width: 1280px; margin: 0 auto; display: flex; align-items: center; justify-content: center; gap: 3rem; flex-wrap: wrap; }
+        .trust-bar-inner { max-width: 1280px; margin: 0 auto; display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 1rem; }
         .trust-bar-label { font-size: 11px; color: var(--dark); font-weight: 700; text-transform: uppercase; letter-spacing: 1.5px; }
         .trust-bar-items { display: flex; align-items: center; justify-content: center; gap: 2.5rem; flex-wrap: nowrap; }
         .trust-bar-item { display: flex; align-items: center; gap: 8px; font-size: 13px; font-weight: 600; color: var(--gray-700); }
